--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -11,114 +11,19 @@ agents: { jobsize: "hours" }
 # Note: "echo exit 13" prevents hang at genus/innovus prompt
 env:
   TEST: 'echo exit 13 | mflowgen/test/test_module.sh'
-  GOLD: /build/prh${BUILDKITE_BUILD_NUMBER}/full_chip
-  #  PRH: $$GARNET_HOME/.buildkite/bin/prh.sh
-  PRH: 'grep foo /dev/null'
-  UPLOAD : 'buildkite-agent pipeline upload'
-
-  FAIL1: 'echo steps : [ { label : FAIL->retry1 , command : exit } ]'
-  FAIL2: 'echo steps : [ { label : FAIL->retry2 , command : exit } ]'
 
 steps:
 
-# postroute_hold, retry if fail.
-- label: "hold"
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-     echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
-     $$PRH |& tee make-prh0.log || $$FAIL1 | $$UPLOAD'
-- wait: { continue_on_failure: true }
-
-# First retry, continue with another retry on failure.
-- label: "hold'"
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-     echo "--- POSTROUTE_HOLD - SECOND ATTEMPT"; set -o pipefail;
-     $$PRH |& tee make-prh1.log || $$FAIL2 | $UPLOAD'
-- wait: { continue_on_failure: true }
-
-# Final postroute_hold attempt, fail pipeline if this one bombs.
-- label: "hold''"
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-     echo "--- POSTROUTE_HOLD - FINAL ATTEMPT"; set -o pipefail;
-     $$PRH |& tee make-prh2.log || exit 13'
-- wait: ~
-
-# ##############################################################################
-# # INDIVIDUAL TILE RUNS
-# 
-# - label: '250MHz PE synth 12m'
-#   commands:
-#   - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
-#   - .buildkite/pipelines/check_pe_area.sh
-# - wait: { continue_on_failure: true } # One step at a time + continue on failure
-# 
-# - label: 'MemCore synth 17m'
-#   commands:
-#   - $TEST --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
-# - wait: { continue_on_failure: true } # One step at a time + continue on failure
-
-
 ##############################################################################
-##############################################################################
-##############################################################################
-# THE TRASH
+# INDIVIDUAL TILE RUNS
 
-#   # FAIL1: 'echo -e "steps:\n- label: FAIL1\n  command: exit" | $$UPLOAD'
-#   FAIL1a: 'steps:\n- label: FAIL1\n  command: exit'
-#   FAIL1: 'set -x; echo -e $$FAIL1a | $$UPLOAD'
-# 
-# 
-# #   FAIL2: 'echo -e "steps:\n- label: FAIL2\n  command: exit" | $$UPLOAD'
+- label: '250MHz PE synth 12m'
+  commands:
+  - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
+  - .buildkite/pipelines/check_pe_area.sh
+- wait: { continue_on_failure: true } # One step at a time + continue on failure
 
-
-# steps : [ { label : FAIL1 , command : exit } ]
-
-#      echo "$$FAIL1";
-#      $$FAIL1;
-#      $$FAIL1 | $$UPLOAD;
-#      $$FAIL1;'
-
-# #     $$PRH |& tee make-prh0.log || echo -n $$FAIL1 | $$UPLOAD'
-
-#   - 'echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
-#      $$PRH || echo FAIL;
-#      $$FAIL1 | $$UPLOAD'
-
-# (exit 13) |& tee make-prh0.log || echo FAIL
-
-# - label: exit13
-#   commands:
-#   - exit 13
-# - wait: ~
-# 
-# 
-# 
-# 
-# 
-# 
-# - label: test1
-#   commands:
-# 
-#   # Insrt failure label
-#   - 'echo -e "steps:\n- label: FAIL1\n  command: exit" | $$UPLOAD'
-# 
-#   - echo But then go on and tdo other stuff
-# 
-#   # Another failure label
-#   - 'echo -e "steps:\n- label: FAIL2\n  command: exit" | $$UPLOAD'
-# 
-#   - echo And then even more dumb stuff
-#   - exit 1
-# 
-# - label: exit13
-#   commands:
-#   - exit 13
-# - wait: ~
-# 
-# 
-# 
-# 
-# 
-# 
+- label: 'MemCore synth 17m'
+  commands:
+  - $TEST --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
+- wait: { continue_on_failure: true } # One step at a time + continue on failure
