--- a/.buildkite/pipelines/postroute_hold_standalone.yml
+++ b/.buildkite/pipelines/postroute_hold_standalone.yml
@@ -7,19 +7,13 @@ env:
   SETUP_BK  : source mflowgen/bin/setup-buildkite.sh --dir $GOLD --need_space
   PHREF     : /sim/buildkite-agent/gold
 
-  # SETUP_PRH : $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$PHREF
-  # RUN_PRH   : $$GARNET_HOME/.buildkite/bin/prh.sh |& tee
-
-
-  SETUP_PRH : echo fooooo
-  RUN_PRH   : grep foo /dev/null |& tee
-
-  # To support postroute_hold retries
-  UPLOAD : 'buildkite-agent pipeline upload'
+  SETUP_PRH : $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$PHREF
+  RUN_PRH   : $$GARNET_HOME/.buildkite/bin/prh.sh |& tee
 
   # Insert "FAIL" labels into mflowgen pipeline
   FAIL1  : 'echo steps : [ { label : FAIL->retry1 , command : exit } ]'
   FAIL2  : 'echo steps : [ { label : FAIL->retry2 , command : exit } ]'
+  UPLOAD : 'buildkite-agent pipeline upload'
 
   # Set slack to -0.3 to make postroute_hold much faster.
   # Default targ slack for full_chip @ 0.06 takes 6 hours atm.
@@ -29,6 +23,7 @@ env:
 steps:
   - label: 'setup'
     commands:
+    # - 'exit 0;
     - '$$SETUP_BK 1G;
        mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
        grep slack .mflowgen/*postroute_hold/mflowgen-run;
@@ -50,6 +45,8 @@ steps:
     commands:
       - echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"
       - 'set -o pipefail; $$SETUP_BK 1G; $$SETUP_PRH;
+         set -x; ls $$GARNET_HOME;
+         ls $$GARNET_HOME/mflowgen/bin;
          $$RUN_PRH make-prh0.log || $$FAIL1 | $$UPLOAD'
 
   - wait: { continue_on_failure: true }
@@ -69,3 +66,13 @@ steps:
       - 'set -o pipefail; $$SETUP_BK 1G; $$SETUP_PRH;
          $$RUN_PRH make-prh2.log || exit 13'
   - wait: ~
+
+
+
+########################################################################
+# TRASH/OLD
+
+  # Uncomment for quick test
+  # SETUP_PRH : echo fooooo
+  # RUN_PRH   : grep foo /dev/null |& tee
+
