--- a/.buildkite/pipelines/postroute_hold_standalone.yml
+++ b/.buildkite/pipelines/postroute_hold_standalone.yml
@@ -7,8 +7,8 @@ env:
   SETUP_BK  : source mflowgen/bin/setup-buildkite.sh --dir $GOLD --need_space
   PHREF     : /sim/buildkite-agent/gold
 
-  SETUP_PRH : $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$PHREF
-  RUN_PRH   : $$GARNET_HOME/.buildkite/bin/prh.sh |& tee
+  SETUP_PRH : $GARNET_HOME/mflowgen/bin/get-step-context.sh $PHREF
+  RUN_PRH   : $GARNET_HOME/.buildkite/bin/prh.sh |& tee
 
   # Insert "FAIL" labels into mflowgen pipeline
   FAIL1  : 'echo steps : [ { label : FAIL->retry1 , command : exit } ]'
