silent fail test number 1

--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -16,16 +16,11 @@ steps:
 
 ##############################################################################
 # INDIVIDUAL TILE RUNS
+# Builds in dir e.g. mflowgen/full_chip/19-tile_array/16-Tile_MemCore
 
 - label: '250MHz PE synth 12m'
   commands:
-  - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
-  - .buildkite/pipelines/check_pe_area.sh
-  - mflowgen/bin/buildcheck.sh full_chip/*tile_array/*Tile_PE --show-all-errors
-- wait: { continue_on_failure: true } # One step at a time + continue on failure
-
-- label: 'MemCore synth 17m'
-  commands:
-  - $TEST --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
-  - mflowgen/bin/buildcheck.sh full_chip/*tile_array/*Tile_MemCore --show-all-errors
-- wait: { continue_on_failure: true } # One step at a time + continue on failure
+  - $TEST --need_space 30G full_chip tile_array Tile_PE --steps rtl --debug
+  - pwd
+  - 'rtl_dir=mflowgen/full_chip/*-tile_array/*-Tile_PE/*-rtl;
+     test -f $$rtl_dir/outputs/design.v || echo oh no failed silently oh no'
